estilizando textos e listas

--- a/orbi-web-games-developer/introdução-html/index.html
+++ b/orbi-web-games-developer/introdução-html/index.html
@@ -38,7 +38,7 @@
     </article>
   </section>
   <footer>
-    <ul>
+    <ul class="contacts_list">
       <li>
         <a href="https://web.dio.me/home" target="_blank">DIO</a>
       </li>
