--- a/orbi-web-games-developer/002 - introdução-ao-bootstrap/index.html
+++ b/orbi-web-games-developer/002 - introdução-ao-bootstrap/index.html
@@ -28,6 +28,14 @@
       </ul>
     </div>
   </nav>
+
+  <section id="quemsomos">
+    <div class="container-fluid quem-somos text-center margin">
+      <p>Teste</p>
+
+    </div>
+
+  </section>
 </body>
 
 
