--- a/orbi-web-games-developer/002 - introdução-ao-bootstrap/index.html
+++ b/orbi-web-games-developer/002 - introdução-ao-bootstrap/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light">
+  <nav class="navbar navbar-expand-lg navbar-light margin">
     <a class="navbar-brand" href="#">
       <img src="./img/global_labs.png" width="120" height="100" alt="">
     </a>
@@ -31,7 +31,9 @@
 
   <section id="quemsomos">
     <div class="container-fluid quem-somos text-center margin">
-      <p>Teste</p>
+      <h3 class="margin">Quem somos</h3>
+      <img src="./img/time.png" class="rounded-circle" width="400" height="400" alt="">
+      <h3>Somos um time comprometido com os resultados</h3>
 
     </div>
 
