lista de navegação com imagens em seu projeto

--- a/orbi-web-games-developer/002 - introdução-ao-bootstrap/index.html
+++ b/orbi-web-games-developer/002 - introdução-ao-bootstrap/index.html
@@ -34,7 +34,26 @@
       <h3 class="margin">Quem somos</h3>
       <img src="./img/time.png" class="rounded-circle" width="400" height="400" alt="">
       <h3>Somos um time comprometido com os resultados</h3>
+    </div>
 
+  </section>
+
+  <section id="parceiros">
+    <div class="container-fluid parceiros text-center margin">
+      <h3 class="margin">PARCEIROS</h3>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="./img/digital-innovation-one.png" width="100%">
+          </div>
+            <div class="col-lg-4">
+              <img src="./img/digital-innovation-one.png" width="100%">
+            </div>
+              <div class="col-lg-4">
+                <img src="./img/digital-innovation-one.png" width="100%">
+              </div>
+        </div>
+      </div>
     </div>
 
   </section>
