introdução ao bootstrap

--- a/orbi-web-games-developer/002 - introdução-ao-bootstrap/index.html
+++ b/orbi-web-games-developer/002 - introdução-ao-bootstrap/index.html
@@ -35,7 +35,6 @@
       <img src="./img/time.png" class="rounded-circle" width="400" height="400" alt="">
       <h3>Somos um time comprometido com os resultados</h3>
     </div>
-
   </section>
 
   <section id="parceiros">
@@ -43,20 +42,55 @@
       <h3 class="margin">PARCEIROS</h3>
       <div class="container">
         <div class="row">
+
           <div class="col-lg-4">
             <img src="./img/digital-innovation-one.png" width="100%">
           </div>
-            <div class="col-lg-4">
-              <img src="./img/digital-innovation-one.png" width="100%">
-            </div>
-              <div class="col-lg-4">
-                <img src="./img/digital-innovation-one.png" width="100%">
-              </div>
+          <div class="col-lg-4">
+            <img src="./img/digital-innovation-one.png" width="100%">
+          </div>
+          <div class="col-lg-4">
+            <img src="./img/digital-innovation-one.png" width="100%">
+          </div>
         </div>
       </div>
     </div>
-
   </section>
+
+  <section id="servicos">
+    <div class="container-fluid servicos text-center margin">
+      <h3 class="margin">SERVIÇOS</h3>
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-4">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias impedit reprehenderit, iste nobis cumque
+              obcaecati voluptatibus quia, assumenda rerum accusamus temporibus, laudantium ad ea quos eos dolore
+              debitis!</p>
+            <img src="./img/app.jpg" width="100%" alt="">
+          </div>
+
+          <div class="col-lg-4">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum neque reiciendis earum, delectus hic quo
+              commodi eaque! In quos corrupti, adipisci neque atque quisquam nam. Excepturi vitae iure dolores maxime!
+            </p>
+            <img src="./img/site.jpg" width="100%" alt="">
+          </div>
+
+          <div class="col-lg-4">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum neque reiciendis earum, delectus hic quo
+              commodi
+              eaque! In quos corrupti, adipisci neque atque quisquam nam. Excepturi vitae iure dolores maxime!</p>
+            <img src="./img/site2.jpg" width="100%" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="container-fluid text-center bg-footer margin">
+    <p>Desenvolvido por Marcelo Alexandre</p>
+  </footer>
 </body>
 
 
