css do jogo da velha

--- a/orbi-web-games-developer/004 - jogo da velha/index.html
+++ b/orbi-web-games-developer/004 - jogo da velha/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/css/styles.css">
   <title>Jogo da velha</title>
 </head>
 
@@ -29,12 +30,12 @@
   </div>
 
   <div class="jogador">
-    <label for="">Jogador:</label>
+    <label for="" >Jogador:</label>
     <label for="" id="jogador-selecionado"></label>
   </div>
 
   <div class="vencedor">
-    <label for="">Vencedor:</label>
+    <label for="" >Vencedor:</label>
     <label for="" id="vencedor-selecionado"></label>
   </div>
 
