--- a/orbi-web-games-developer/004 - jogo da velha/index.html
+++ b/orbi-web-games-developer/004 - jogo da velha/index.html
@@ -12,30 +12,30 @@
   <h1>Jogo da Velha</h1>
 
   <div>
-    <div id="1" class="quadrado">-</div>
-    <div id="2" class="quadrado">-</div>
-    <div id="3" class="quadrado">-</div>
+    <div id="1" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
+    <div id="2" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
+    <div id="3" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
   </div>
 
   <div>
-    <div id="4" class="quadrado">-</div>
-    <div id="5" class="quadrado">-</div>
-    <div id="6" class="quadrado">-</div>
+    <div id="4" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
+    <div id="5" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
+    <div id="6" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
   </div>
 
   <div>
-    <div id="7" class="quadrado">-</div>
-    <div id="8" class="quadrado">-</div>
-    <div id="9" class="quadrado">-</div>
+    <div id="7" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
+    <div id="8" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
+    <div id="9" class="quadrado" onclick="escolherQuadrado(this.id)">-</div>
   </div>
 
   <div class="jogador">
-    <label for="" >Jogador:</label>
+    <label for="">Jogador:</label>
     <label for="" id="jogador-selecionado"></label>
   </div>
 
   <div class="vencedor">
-    <label for="" >Vencedor:</label>
+    <label for="">Vencedor:</label>
     <label for="" id="vencedor-selecionado"></label>
   </div>
 
@@ -44,5 +44,6 @@
   </div>
 
 </body>
+<script src="./assets/js/scripts.js"></script>
 
 </html>
