--- a/orbi-web-games-developer/005 - jogo de nave/index.html
+++ b/orbi-web-games-developer/005 - jogo de nave/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="container">
     <div id="fundoGame">
-      <div id="inicio">
+      <div id="inicio" onclick="start()">
         <h1>Resgate</h1>
         <p>Utilize a tecla ↑ para movimentar o helicóptero para cima, a tecla ↓ para movimentar o helicóptero para baixo
           e a tecla D para atirar.</p>
@@ -19,6 +19,8 @@
       </div>
     </div>
   </div>
+  <script type="text/javascript" src="./src/js/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="./src/js/js.js"></script>
 
 </body>
 </html>
