--- a/orbi-web-games-developer/005 - jogo de nave/index.html
+++ b/orbi-web-games-developer/005 - jogo de nave/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resgate</title>
-  <link rel="stylesheet" href="./src/styles/styles.css">
+  <link rel="stylesheet" href="./src/styles/styles.css" type="text/css">
 </head>
 
 <body>
